[gd_scene load_steps=15 format=4 uid="uid://cjlgaudfgsfag"]

[ext_resource type="Script" uid="uid://cfv4knhtngyp6" path="res://Levels/test_level.gd" id="1_4tl1u"]
[ext_resource type="TileSet" uid="uid://usyi1f352fk7" path="res://Sprites/level.tres" id="1_qjltr"]
[ext_resource type="Texture2D" uid="uid://co8jbmkqdsc02" path="res://Sprites/kittyKongPrototypeSpriteSheet.png" id="2_71kea"]
[ext_resource type="Script" uid="uid://bardlq0oi5t1y" path="res://Levels/testPlayer.gd" id="2_dte5x"]
[ext_resource type="PackedScene" uid="uid://bqfyfqhb5fohv" path="res://States/player_controller.tscn" id="3_k6ssh"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_lx7qo"]
[ext_resource type="PackedScene" uid="uid://8jr8n02pbw7g" path="res://States/idle.tscn" id="8_14iyf"]
[ext_resource type="PackedScene" uid="uid://co3cnkvman01u" path="res://States/run.tscn" id="9_jvevq"]
[ext_resource type="PackedScene" uid="uid://ckuvx42cxr8bs" path="res://States/jump.tscn" id="10_jjmme"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="11_dkv23"]
[ext_resource type="PackedScene" uid="uid://wh0ylmyle3ah" path="res://States/fall.tscn" id="11_q3t1n"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="12_x458k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dlqo7"]
radius = 30.0
height = 110.0

[sub_resource type="Resource" id="Resource_lrol0"]
script = ExtResource("12_x458k")

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_4tl1u")

[node name="TileLayers" type="Node2D" parent="."]

[node name="Floors" type="TileMapLayer" parent="TileLayers"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD//woABAABAAQAAAD//wkABAABAAQAAAD//wgABAABAAQAAAD//wcABAABAAQAAAD//wYABAABAAQAAAD//wUABAABAAQAAAD//wQABAABAAQAAAD//wMABAABAAQAAAD//wIABAABAAQAAAAEAAkABAABAAQAAAAFAAkABAACAAQAAAAKAAcABAABAAQAAAALAAcABAACAAQAAAD//wsABAABAAQAAAAAAAsABAACAAQAAAABAAsABAABAAQAAAACAAsABAACAAQAAAADAAsABAABAAQAAAAEAAsABAACAAQAAAAFAAsABAABAAQAAAAGAAsABAACAAQAAAAHAAsABAABAAQAAAAIAAsABAACAAQAAAAJAAsABAABAAQAAAAKAAsABAACAAQAAAALAAsABAABAAQAAAAMAAsABAACAAQAAAANAAsABAABAAQAAAAOAAsABAACAAQAAAAPAAsABAABAAQAAAAQAAsABAACAAQAAAARAAsABAABAAQAAAASAAsABAACAAQAAAATAAsABAABAAQAAAAUAAsABAACAAQAAAAVAAsABAABAAQAAAAWAAsABAACAAQAAAAXAAsABAABAAQAAAAYAAsABAACAAQAAAAZAAsABAABAAQAAAAaAAsABAACAAQAAAAbAAsABAABAAQAAAAcAAsABAACAAQAAAAdAAsABAABAAQAAAAeAAsABAACAAQAAAAfAAsABAABAAQAAAAgAAsABAACAAQAAAAhAAoABAABAAQAAAAiAAoABAACAAQAAAAhAAsABAABAAQAAAAiAAsABAACAAQAAAAjAAoABAABAAQAAAAkAAoABAACAAQAAAAjAAsABAABAAQAAAAkAAsABAACAAQAAAAlAAsABAABAAQAAAAmAAsABAACAAQAAAAnAAsABAABAAQAAAAoAAsABAACAAQAAAApAAsABAABAAQAAAAqAAsABAACAAQAAAAqAAoABAABAAQAAAAqAAkABAABAAQAAAAqAAgABAABAAQAAAAqAAcABAABAAQAAAAqAAYABAABAAQAAAAqAAUABAABAAQAAAAqAAQABAABAAQAAAAqAAMABAABAAQAAAAqAAIABAABAAQAAAAqAAEABAABAAQAAAAqAAAABAABAAQAAAAqAP//BAABAAQAAAA=")
tile_set = ExtResource("1_qjltr")
rendering_quadrant_size = 32

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(59, 637)
process_callback = 0
limit_left = -40
limit_bottom = 750

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_lx7qo")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(59, 637)
collision_mask = 2
script = ExtResource("2_dte5x")

[node name="PlayerController" parent="CharacterBody2D" node_paths=PackedStringArray("initial_state") instance=ExtResource("3_k6ssh")]
position = Vector2(-51, -637)
jump_height = 200.0
down_gravity = 2.5
initial_state = NodePath("idle")

[node name="idle" parent="CharacterBody2D/PlayerController" node_paths=PackedStringArray("run_state", "jump_state", "fall_state") instance=ExtResource("8_14iyf")]
run_state = NodePath("../run")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")

[node name="run" parent="CharacterBody2D/PlayerController" node_paths=PackedStringArray("idle_state", "jump_state", "fall_state") instance=ExtResource("9_jvevq")]
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")

[node name="jump" parent="CharacterBody2D/PlayerController" node_paths=PackedStringArray("idle_state", "run_state", "fall_state") instance=ExtResource("10_jjmme")]
idle_state = NodePath("../idle")
run_state = NodePath("../run")
fall_state = NodePath("../fall")

[node name="fall" parent="CharacterBody2D/PlayerController" node_paths=PackedStringArray("run_state", "jump_state", "idle_state") instance=ExtResource("11_q3t1n")]
run_state = NodePath("../run")
jump_state = NodePath("../jump")
idle_state = NodePath("../idle")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("2_71kea")
region_enabled = true
region_rect = Rect2(192, 88, 67, 107)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_dlqo7")

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(59, 637)
script = ExtResource("11_dkv23")
follow_mode = 5
follow_target = NodePath("../CharacterBody2D")
tween_resource = SubResource("Resource_lrol0")
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="velocity" type="Label" parent="UI"]
layout_mode = 1
offset_right = 66.0
offset_bottom = 23.0
text = "Velocity:"
metadata/_edit_use_anchors_ = true

[node name="settings" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1154.0
offset_top = 2.0
offset_right = 1194.0
offset_bottom = 25.0
grow_horizontal = 0

[node name="player_pos" type="Label" parent="UI"]
layout_mode = 0
offset_top = 24.0
offset_right = 158.0
offset_bottom = 47.0
text = "player pos: "

[node name="Settings" type="Control" parent="UI"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1216.0
offset_right = 1216.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -369.0
offset_bottom = 140.0
grow_horizontal = 0
theme_override_constants/separation = 42

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/HBoxContainer"]
layout_mode = 2

[node name="Movement" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Movement"

[node name="maxSpeed" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="maxAcel" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="maxDecel" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="turnSpeed" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/HBoxContainer"]
layout_mode = 2

[node name="Jumping" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Jumping"

[node name="jumpHeight" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="jumpDuration" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="downGravity" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="airAccel" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="airBreak" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="airControl" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="variableHeight" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="variableHeightCutoff" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="airJump" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="airJumpCount" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/Settings/HBoxContainer"]
layout_mode = 2

[node name="Assists" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Assists
"

[node name="coyoteTime" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="jumpBuffer" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="terminalVelocity" type="Label" parent="UI/Settings/HBoxContainer/VBoxContainer3"]
layout_mode = 2
